deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seedwing-policy-server
  name: seedwing-policy-server
  namespace: seedwing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seedwing-policy-server
  template:
    metadata:
      labels:
        app: seedwing-policy-server
    spec:
      containers:
      - image: ghcr.io/seedwing-io/seedwing-policy-server:0.1.0-alpha.5
        imagePullPolicy: IfNotPresent
        name: seedwing-policy-server
        ports:
        - containerPort: 8080
          protocol: TCP
