deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seedwing-policy-server
  name: seedwing-policy-server
  namespace: seedwing
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: seedwing-policy-server
  type: ClusterIP
