deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: seedwing-policy-server
  name: seedwing-policy-server
  namespace: seedwing
spec:
  host: playground.seedwing.io
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: seedwing-policy-server
    weight: 100
  wildcardPolicy: None
